Streamer post designed as well as related streamers

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <!-- end of top nav bar -->
       <!-- side nav bar -->
       <div class="contentBox">
-        <div class="columns is-mobile is-gapless">
+        <div class="columns is-mobile">
           <div class="column is-2" id="leftCol">
             <div class="card">
               <div class="card-content">
@@ -49,112 +49,7 @@
               </div>
             </div>
           </div>
-          <div class="column is-6">
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
+          <div id="middleContent" class="column is-4">
             <div class="card">
               <div class="card-content">
                 <div class="subtitle">
@@ -163,16 +58,58 @@
               </div>
             </div>
           </div>
-          <div class="column is-4">
-            <div class="card">
+          <div class="column is-6">
+
+            <!-- follower posts -->
+            <div id="middleContent" class="card">
+              <header class="card-header">
+                <div class="card-header-title" >
+                  <img id="streamerImage" src="https://lh3.googleusercontent.com/dB3Dvgf3VIglusoGJAfpNUAANhTXW8K9mvIsiIPkhJUAbAKGKJcEMPTf0mkSexzLM5o=w300" alt="">
+                  <div class="media-content">
+                    <p class="title is-7" id="streamerTextPost">Streamer Name</p>
+                    <p class="subtitle is-6" id="streamerTextPost">5 days ago</p>
+                  </div>
+
+                </div>
+              </header>
+
               <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
+                <div class="subtitle" id="streamerTextPost">
+                  Reddit: Лучшее за начало 2018 года
                 </div>
               </div>
+                <img class="circletag" src="https://i.imgur.com/Hawb3it.png" class="reaction">
+                <img class="circletag" src="https://pbs.twimg.com/media/DNpMJktWsAArjGS.png" class="reaction">
+                <img class="circletag" src="http://i0.kym-cdn.com/entries/icons/original/000/000/142/feelsgoodman.png" class="reaction">
+                143
+            </div>
+
+
+
+            <!-- viewing history streams -->
+            <div id="middleContent" class="card">
+              <header class="card-header">
+                <div class="card-header-title" >
+                  <div class="media-content">
+                    <p id="streamerTextPost">Because of your viewing history</p>
+                  </div>
+              </header>
+              <div id='streamPreview' class="card-content">
+                <img id='streamPreview' src="http://allaboutwindowsphone.com/images/flow/twitch/twitch3.jpg" alt="">
+              </div>
+              <img id="streamerImage" class="recStreamDetail" src="https://lh3.googleusercontent.com/dB3Dvgf3VIglusoGJAfpNUAANhTXW8K9mvIsiIPkhJUAbAKGKJcEMPTf0mkSexzLM5o=w300" alt="">
+              <div class="media-content">
+                <p class="title is-5" id="streamerTextPost">Streamer Name</p>
+                <p class="title is-5" id="streamerTextPost">Stream Title</p>
+                <p class="subtitle is-5" id="streamerTextPost">Game Plays</p>
+              </div>
+
             </div>
           </div>
         </div>
+
+
+
       </div>
    </body>
 </html>
