Working dual scroll

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
       <link rel="stylesheet" href="./style.css">
       <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script type="text/javascript" src="./index.js">
+
+      </script>
    </head>
    <body>
       <!-- start of top nav bar -->
       <div class="navbarContainer" id="navbarContainer">
             <div class="navbar" id="navbarContainer">
+
                <div class="navbar-brand" id="navbarContainer">
                   <div class="navbar-item">
                      <img src="https://s3-us-west-2.amazonaws.com/sportshub2-uploads-prod/files/sites/590/2016/04/22003214/d6ac19a5c38b46e4-live-streaming-logo.png" alt="">
@@ -41,6 +46,71 @@
       <div class="contentBox">
         <div class="columns is-mobile">
           <div class="column is-2" id="leftCol">
+            <div class="card" id="leftColMargin">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+          </div>
+          <div id="leftCont" class="column is-4 linked-scrollbar-fixed">
+            <div id="middleContent" class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
             <div class="card">
               <div class="card-content">
                 <div class="subtitle">
@@ -49,16 +119,7 @@
               </div>
             </div>
           </div>
-          <div id="middleContent" class="column is-4">
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column is-6">
+          <div id="rightCont" class="column is-6 linked-scrollbar-fixed">
 
             <!-- follower posts -->
             <div id="middleContent" class="card">
@@ -81,7 +142,7 @@
                 <img class="circletag" src="https://i.imgur.com/Hawb3it.png" class="reaction">
                 <img class="circletag" src="https://pbs.twimg.com/media/DNpMJktWsAArjGS.png" class="reaction">
                 <img class="circletag" src="http://i0.kym-cdn.com/entries/icons/original/000/000/142/feelsgoodman.png" class="reaction">
-                143
+                <span id= "reactionCount"> 143</span>
             </div>
 
 
