Working on getting the list of featured streams to show

--- a/index.html
+++ b/index.html
@@ -56,73 +56,6 @@
           </div>
           <div id="leftCont" class="column is-4 linked-scrollbar-fixed">
             <div id="middleContent" class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-content">
-                <div class="subtitle">
-                  asdfasdfasdfafsdfas
-                </div>
-              </div>
-            </div>
-          </div>
-          <div id="rightCont" class="column is-6 linked-scrollbar-fixed">
-
-            <!-- follower posts -->
-            <div id="middleContent" class="card">
               <header class="card-header">
                 <div class="card-header-title" >
                   <img id="streamerImage" src="https://lh3.googleusercontent.com/dB3Dvgf3VIglusoGJAfpNUAANhTXW8K9mvIsiIPkhJUAbAKGKJcEMPTf0mkSexzLM5o=w300" alt="">
@@ -154,6 +87,7 @@
                   <div class="media-content">
                     <p id="streamerTextPost">Because of your viewing history</p>
                   </div>
+                </div>
               </header>
               <div id='streamPreview' class="card-content">
                 <img id='streamPreview' src="http://allaboutwindowsphone.com/images/flow/twitch/twitch3.jpg" alt="">
@@ -167,6 +101,107 @@
 
             </div>
           </div>
+          <div id="rightCont" class="column is-6 linked-scrollbar-fixed">
+            <div id="middleContent" class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-content">
+                <div class="subtitle">
+                  asdfasdfasdfafsdfas
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <header class="card-header">
+                <div class="card-header-title" >
+                  <div class="media-content">
+                    <p id="streamerTextPost">Featured Boradcasters</p>
+                  </div>
+                </div>
+              </header>
+              <div id='streamPreview' class="card-content">
+                <img id='streamPreview' src="https://cdn.strexm.tv/includes/assets/images/figures/modular.gif" alt="">
+              </div>
+              <img id="streamerImage" class="recStreamDetail" src="https://static-cdn.jtvnw.net/jtv_user_pictures/cutedog_-profile_image-72976cbe312ba0af-70x70.png" alt="">
+              <div class="media-content">
+                <div class="follow">
+                  <button type="button" name="button">Follow</button>
+                </div>
+                <p class="title is-5" id="streamerTextPost">Streamer Name</p>
+                <p class="title is-5" id="streamerTextPost">Stream Title</p>
+
+              </div>
+              <div class="subtitle is-6">
+                This is the channel description. This is the channel description. This is the channel description. This is the channel description. This is the channel description. This is the channel description. This is the channel description.
+              </div>
+
+            </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="stream-options">
+                side nav that you can filter through
+              </div>
+            </div>
+          </div>
+        </div>
+
+            <!-- follower posts -->
+
         </div>
 
 
