Tried several options of carousels and slideshows none feel right

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="./style.css">
       <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://use.fontawesome.com/ad3b889e2a.js"></script>
       <script type="text/javascript" src="./index.js">
 
       </script>
@@ -191,11 +192,53 @@
 
             </div>
 
-          <div class="card">
-            <div class="card-content">
+          <div class="card" id="streamRecPreview">
+            <div class="card-content" >
               <div class="stream-options">
-                side nav that you can filter through
-              </div>
+                
+                 <div class="module-section clearfix">
+                   <!-- <button class="btn arrow-guides fa-chevron-left"></button> -->
+                   <ul id="content">
+
+                     <li class="cardSide effect1">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+                     <li class="cardSide">
+                         <img src="https://i.ytimg.com/vi/QwwT-PJFRZQ/maxresdefault.jpg">
+                     </li>
+
+                   </ul>
+
+                 </div>
+                 <!--end of module-section-->
+               </div>
             </div>
           </div>
         </div>
