Mobile content now collapses correctly and scrolls

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
               </div>
             </div>
           </div>
-          <div id="leftCont" class="is-10-mobile column is-4 linked-scrollbar-fixed">
+          <div class="column is-10">
+            <div id ="twoContContainer" class="columns">
+
+          <div id="leftCont" class="column is-5 linked-scrollbar-fixed">
             <div id="middleContent" class="card">
               <header class="card-header">
                 <div class="card-header-title" >
@@ -102,7 +105,7 @@
 
             </div>
           </div>
-          <div id="rightCont" class="column is-6 is-10-mobile linked-scrollbar-fixed">
+          <div id="rightCont" class="column is-7 linked-scrollbar-fixed">
             <div class="card">
               <header class="card-header">
                 <div class="card-header-title" >
@@ -157,7 +160,9 @@
         </div>
 
             <!-- follower posts -->
+          </div>
 
+          </div>
         </div>
 
 
