Removed old CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       <link rel="stylesheet" href="./style.css">
       <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://use.fontawesome.com/ad3b889e2a.js"></script>
       <script type="text/javascript" src="./index.js">
 
       </script>
@@ -51,7 +50,7 @@
               <!-- <div class="card-content"> -->
                 <img class="streamerLeftNavImage" src="https://static-cdn.jtvnw.net/jtv_user_pictures/3973e918fe7cc8c8-profile_image-70x70.png" alt="">
                 <div class="subtitle posterName">
-                  asdfasdfasdfafsdfas
+                  Streamer placeholder Name
                 </div>
               <!-- </div> -->
             <!-- </div> -->
